# vetkd-utils-template

./: .gitignore  .mise.toml  Cargo.toml  Makefile.toml  README.md  build.sh  canister_ids.json  chainkey_testing_canister.wasm  dfx.json  didc.sh  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  watch.sh
.github/: release-please-config.json  release-please-manifest.json
.github/workflows/: build.yml
patches/: svelte-preprocess.patch
src/declarations/vetkd_notes/: index.d.ts  index.js  vetkd_notes.did  vetkd_notes.did.d.ts  vetkd_notes.did.js
src/declarations/vetkd_system_api/: index.d.ts  index.js  vetkd_system_api.did.d.ts  vetkd_system_api.did.js
